<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="BLDC">BLDC</string>
    <string name="DC">DC</string>
    <string name="Delete">Delete</string>
    <string name="Dialog_Quality_Titel">Video Quality</string>
    <string name="FOC">FOC</string>
    <string name="Folder">Folder</string>
    <string name="Parent_Directory">Parent Directory</string>
    <string name="Rename">Rename</string>
    <string name="Send">Send</string>
    <string name="a">A</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="altitude">Alt</string>
    <string name="app_name">VESC Monitor</string>
    <string name="averageRunning">Ø Ri</string>
    <string name="averageTotal">Ø To</string>
    <string name="averages">Ø Total / Riding</string>
    <string name="avg">Ø</string>
    <string name="avgPerKm">Ø per km</string>
    <string name="avgPerKmActual">per km</string>
    <string name="avgPerMi">Ø per mi</string>
    <string name="avgPerMiActual">per mi</string>
    <string name="battery">Battery</string>
    <string name="batteryCurrent">Battery Current</string>
    <string name="batteryType_prompt">Choose the number of VESCs in your system</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="changed_default_folder_info">Changed folder for new files to</string>
    <string name="charged">Charged</string>
    <string name="connected">Connected</string>
    <string name="controllerid_prompt">Choose the controller ID</string>
    <string name="currentDir">Current Dir</string>
    <string name="dataLogging_prompt">Choose the distance unit</string>
    <string name="default_new_folder_text">New folder</string>
    <string name="degrees">°C</string>
    <string name="delete_of_folder_had_issues">Could not delete the folder</string>
    <string name="disconnected">Disconnected</string>
    <string name="distance">Distance</string>
    <string name="distanceShort">Dist</string>
    <string name="distance_prompt">Choose the distance unit</string>
    <string name="drawn">Drawn</string>
    <string name="duration">Duration</string>
    <string name="duty">Duty</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="failed_to_crate_directory">failed to create directory</string>
    <string name="feet">f</string>
    <string name="front_controllerid_prompt">Choose the controller ID for the Front</string>
    <string name="intro_message">This is a app to control the VESC and display the actual values.</string>
    <string name="km">km</string>
    <string name="kmPerHour">km/h</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_permissions">label_permissions</string>
    <string name="label_state">State:</string>
    <string name="max">Max</string>
    <string name="maxBatteryCurrentMain">Max B</string>
    <string name="maxMotorCurrentMain">Max M</string>
    <string name="maxSpeedMainKm">Max km/h</string>
    <string name="maxSpeedMainMi">Max mi/h</string>
    <string name="maxWatt">Max Watt</string>
    <string name="maxWattMain">Max W</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Discon.</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="meter">m</string>
    <string name="mi">mi</string>
    <string name="milesPerHour">mi/h</string>
    <string name="min">Min</string>
    <string name="minBatteryCurrentMain">Min B</string>
    <string name="minMotorCurrentMain">Min M</string>
    <string name="mode">Mode</string>
    <string name="mot">Mot</string>
    <string name="motor">Motor</string>
    <string name="motorCurrent">Motor Current</string>
    <string name="noOfMotors_prompt">Choose the number of VESCs in your system</string>
    <string name="no_data">No data</string>
    <string name="notSupported">Not supported by this Firmware Version.</string>
    <string name="packetDelay_prompt">Delay between Bluetooth packets in ms</string>
    <string name="perCell">Cell</string>
    <string name="permission_audio">"No audio recording permission. 
All audio function is disabled"</string>
    <string name="permission_audio_recording_reason">Audio recording permission is necessary for movie capture with audio.</string>
    <string name="permission_audio_recording_request">Audio recording permission is necessary for movie capture with audio.</string>
    <string name="permission_audio_streaming_reason">Audio recording permission is necessary for streaming with audio.</string>
    <string name="permission_audio_streaming_request">Audio recording permission is necessary for streaming with audio.</string>
    <string name="permission_camera">No camera access permission</string>
    <string name="permission_camera_finish">"No camera access permission. 
App will finish soon"</string>
    <string name="permission_camera_reason">Camera access permission is necessary for fallback to built in camera.</string>
    <string name="permission_camera_request">Camera access permission is necessary for fallback to built in camera.</string>
    <string name="permission_ext_storage">"No permission of writing external storage. 
Movie/still image capturing are disabled."</string>
    <string name="permission_ext_storage_finish">"No writing external storage permission. 
App will finish soon"</string>
    <string name="permission_ext_storage_reason">Permission of writing external storage is necessary for movie/still image capturing.</string>
    <string name="permission_ext_storage_request">Permission of writing external storage is necessary for movie/still image capturing.</string>
    <string name="permission_location">No location access permission</string>
    <string name="permission_location_finish">"No location access permission. 
App will finish soon"</string>
    <string name="permission_location_reason">Location access permission is necessary for %s</string>
    <string name="permission_location_request">Location access permission is necessary for %s</string>
    <string name="permission_network">No network access permission.</string>
    <string name="permission_network_finish">"No network access permission. 
App will finish soon"</string>
    <string name="permission_network_reason">Network access permission is necessary for streaming.</string>
    <string name="permission_network_request">Network access permission is necessary for streaming.</string>
    <string name="permission_title">Regarding permission</string>
    <string name="pidBrakingAllowed_prompt">Choose the distance unit</string>
    <string name="pid_prompt">Choose the number of VESCs in your system</string>
    <string name="power">Power</string>
    <string name="ppmMode_prompt">please select the PPM mode</string>
    <string name="range">Range</string>
    <string name="realtimeSize_prompt">Choose the size of the realtime data for videos</string>
    <string name="search_menu_title">Search</string>
    <string name="send_button_text">Send</string>
    <string name="size">Size</string>
    <string name="soundQuality_prompt">Choose the kbit for the sound quality</string>
    <string name="spaceFeet">" f"</string>
    <string name="spaceKm">" km"</string>
    <string name="spaceKmPerHour">" km/h"</string>
    <string name="spaceMeter">" m"</string>
    <string name="spaceMiles">" mi"</string>
    <string name="spaceMilesPerHour">" mi/h"</string>
    <string name="speed">Speed</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="temp">Temperature</string>
    <string name="tempShorted">Temp</string>
    <string name="this_folder_has_other_files">This folder containes other files then CSV or MK4 files</string>
    <string name="throttleMode_prompt">Choose the number of VESCs in your system</string>
    <string name="title_activity_battery_setup">Battery Setup</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="title_activity_board_info">BoardInfo</string>
    <string name="title_activity_drive_gear_setup">Drive Gear Setup</string>
    <string name="title_activity_file_chooser">FileChooserActivity</string>
    <string name="title_activity_modes">Modes</string>
    <string name="title_activity_plot_screen">Plot Screen</string>
    <string name="title_activity_video_setup">Video Setup</string>
    <string name="title_devices">Devices</string>
    <string name="title_new_folder">Enter name for new Folder</string>
    <string name="title_rename">Please enter the new name</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_service">Unknown service</string>
    <string name="upload_video_via">Upload file via:</string>
    <string name="v">V</string>
    <string name="vescNotConnected">VESC not connected</string>
    <string name="videoLayout_prompt">Choose the video Layout of the realtime data for videos</string>
    <string name="videoQuality_prompt">Choose the kbit for the video quality</string>
    <string name="videoResultion_prompt">Choose the video Resolution</string>
    <string name="w">W</string>
</resources>
