<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n1:orientation="vertical" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_margin="10.0dip"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <LinearLayout n1:orientation="horizontal" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_margin="10.0dip">
        <TextView n1:textSize="18.0sp" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/label_device_address" />
        <Space n1:layout_width="5.0dip" n1:layout_height="wrap_content" />
        <TextView n1:textSize="18.0sp" n1:id="@id/device_address" n1:layout_width="fill_parent" n1:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout n1:orientation="horizontal" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_margin="10.0dip">
        <TextView n1:textSize="18.0sp" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/label_state" />
        <Space n1:layout_width="5.0dip" n1:layout_height="wrap_content" />
        <TextView n1:textSize="18.0sp" n1:id="@id/connection_state" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/disconnected" />
    </LinearLayout>
    <LinearLayout n1:orientation="horizontal" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_margin="10.0dip">
        <TextView n1:textSize="18.0sp" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/label_data" />
        <Space n1:layout_width="5.0dip" n1:layout_height="wrap_content" />
        <TextView n1:textSize="18.0sp" n1:id="@id/data_value" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/no_data" />
    </LinearLayout>
    <ExpandableListView n1:id="@id/gatt_services_list" n1:layout_width="fill_parent" n1:layout_height="182.0dip" />
</LinearLayout>